# hb40_neural_control

./: CMakeLists.txt  README.md  package.xml
config/: hb40_neural_controller.param.yaml  hb40_plotjuggler.xml
include/hb40_neural_controller/: hb40_neural_controller.hpp  hb40_neural_controller_constants.hpp  hb40_neural_controller_node.hpp  visibility_control.hpp
launch/: hb40_neural_controller.launch.py  sim_nn.launch.py
policy/: badger_deployment_network_id12.pt  badger_deployment_network_id13.pt  deployment_network_id1.pt  deployment_network_id3.pt  policy_obs_qpos_qvel_angvel_grav_prevact.pt  policy_qpos_qvel_angvel.pt
scripts/: nn_ros_controller.py
src/: hb40_neural_controller.cpp  hb40_neural_controller_node.cpp
test/: test_hb40_neural_controller.cpp
